 - Qt: Fix undesired screen filtering when paused (fixes mgba.io/i/1602)
 - Qt: Fix sprite view using wrong base address (fixes mgba.io/i/1603)
 - Qt: Fix inability to clear default keybindings
 - Qt: Release held actions if they get rebound
 - Vita: Fix analog controls (fixes mgba.io/i/1554)
 - Wii: Fix game fast-forwarding after slowing down
Misc:
 - GB Memory: Support manual SRAM editing (fixes mgba.io/i/1580)
 - GBA Audio: Redo channel 4 batching for GBA only
 - GBA I/O: Stop logging several harmless invalid register reads
 - Debugger: Separate aliases from main commands
 - Debugger: Print break-/watchpoint ID when breaking in CLI
 - Debugger: Minor interface cleanup
 - SDL: Use controller GUID instead of name
 - SM83: Rename LR35902 to SM83
 - Tools: Allow using threaded renderer in perf.py
 - Tools: Clean up unused argument in mgba-perf

0.8 beta 1: (2019-10-20)
- Initial beta for 0.8

0.7.3: (2019-09-15)
Emulation fixes:
 - GB: Fix savedata initialization (fixes mgba.io/i/1473, mgba.io/i/1478)
 - GB: Fix SGB controller incrementing (fixes mgba.io/i/1104)
 - GB Audio: Improve channel 4 supersampling
 - GB Printer: Reset printer buffer index after printing
 - GB Audio: Deschedule channel 3 when disabled (fixes mgba.io/i/1463)
 - GB Audio: Deschedule channel 1 when disabled by sweep (fixes mgba.io/i/1467)
 - GB Video: Increment BCPS/OCPS even in mode 3 (fixes mgba.io/i/1462)
 - GBA Memory: Fix STM to VRAM (fixes mgba.io/i/1430)
 - GBA Memory: Fix STM/LDM to invalid VRAM
 - GBA Video: Fix wrapped sprite mosaic clamping (fixes mgba.io/i/1432)
 - GBA Audio: Fix channel 4 aliasing (fixes mgba.io/i/1265)
Other fixes:
 - Core: Fix crashes if core directories aren't set
 - Core: Fix crash when exiting game with cheats loaded
 - GBA: Set up GPIO mapping on null and ELF ROM regions (fixes mgba.io/i/1481)
 - GBA Cheats: Fix PARv3 Thumb hooks
 - GBA Cheats: Fix value incrementing in CB slide codes (fixes mgba.io/i/1501)