@@ -113,6 +113,7 @@ Other fixes:
  - Qt: Release held actions if they get rebound
  - Vita: Fix analog controls (fixes mgba.io/i/1554)
  - Wii: Fix game fast-forwarding after slowing down
+ - Wii: Improve audio buffering (fixes mgba.io/i/1617)
 Misc:
  - GB Memory: Support manual SRAM editing (fixes mgba.io/i/1580)
  - GBA Audio: Redo channel 4 batching for GBA only
